--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.6.1",
+    "axios": "^0.19.0",
     "npm": "^6.12.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
